df-derive/tests/fail/142-fail-as-string-on-borrowed-bytes.rs
use df_derive::ToDataFrame;
#[path = "../common.rs"]
mod core;

#[derive(ToDataFrame)]
struct Bad<'a> {
    #[df_derive(as_string)]
    bytes: &'a [u8],
}

fn main() {}
